--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/btn_home_logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:src="@drawable/logo"
@@ -28,10 +28,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/btn_home_logo">
 
             <ImageView
                 android:id="@+id/btn_notification"
@@ -49,8 +50,8 @@
 
         <ImageView
             android:id="@+id/img_profile_1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="32dp"
             android:layout_marginStart="24dp"
             android:src="@drawable/profile"
@@ -59,13 +60,15 @@
 
         <TextView
             android:id="@+id/tv_noti_1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="철수님이 약속을 확인했습니다!"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/img_profile_1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_profile_1"
             app:layout_constraintBottom_toBottomOf="@+id/img_profile_1"/>
 
@@ -80,13 +83,15 @@
 
         <TextView
             android:id="@+id/tv_noti_2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="유리님과의 약속이 다가오고 있습니다!"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/cb_check_1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/cb_check_1"
             app:layout_constraintBottom_toBottomOf="@+id/cb_check_1"/>
 
@@ -96,18 +101,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:src="@drawable/checkbox1"
-            app:layout_constraintStart_toStartOf="@+id/img_check_1"
-            app:layout_constraintTop_toBottomOf="@+id/img_check_1"/>
+            app:layout_constraintStart_toStartOf="@+id/cb_check_1"
+            app:layout_constraintTop_toBottomOf="@+id/cb_check_1"/>
 
         <TextView
             android:id="@+id/tv_noti_3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="9/22 17:00 동양식당 예약"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/cb_check_2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/cb_check_2"
             app:layout_constraintBottom_toBottomOf="@+id/cb_check_2"/>
 
@@ -118,14 +125,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:paddingHorizontal="16dp"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/cb_check_2">
 
             <FrameLayout
                 android:id="@+id/frame_weather"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/widget1">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -145,8 +154,10 @@
 
             <FrameLayout
                 android:id="@+id/frame_transport"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
                 android:background="@drawable/widget1">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -174,57 +185,12 @@
 
         <FrameLayout
             android:id="@+id/map_container"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="24dp"
             android:background="#E0E0E0"
             app:layout_constraintTop_toBottomOf="@+id/layout_widgets"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-        <ImageView
-            android:id="@+id/widget2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.629"
-            app:layout_constraintStart_toEndOf="@+id/widget1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.374"
-            app:srcCompat="@drawable/widget1" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="날씨api"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="77dp"
-            tools:layout_editor_absoluteY="276dp" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="교통수단"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="271dp"
-            tools:layout_editor_absoluteY="276dp" />
-
-        <FrameLayout
-            android:id="@+id/map_container"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:background="#E0E0E0"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.935" />
-        </FrameLayout>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
